--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="toggleWrap">
-      <input type="checkbox" class="" id="" />
-      <label for="" class="toggle">
+    <div class="toggleWrapper">
+      <input type="checkbox" class="dn" id="dn" />
+      <label for="dn" class="toggle">
         <span class="toggle__handler">
           <span class="crater crater--1"></span>
           <span class="crater crater--2"></span>
